import java.text.SimpleDateFormat

plugins {
	id 'fml-loom' version '0.1.local'
	id 'maven-publish'
}

version = project.mod_version
group = project.maven_group

static def buildTime() {
	def df = new SimpleDateFormat("yyyyMMddHHmm")
	df.setTimeZone(TimeZone.getTimeZone("UTC"))
	return df.format(new Date())
}

base {
	archivesName = project.archives_base_name + "-dev-build." + buildTime()
//	archivesName = "[高亮信息显示]" + project.archives_base_name
}

repositories {
	mavenLocal()
	maven {
		name = "Spongepowered"
		url = "https://repo.spongepowered.org/repository/maven-public/"
	}
}

loom {
	accessWidenerPath = file("src/main/resources/hwite.accesswidener")
	mergedMinecraftJar()
	setFML(new File("libs\\FishModLoader-v3.3.3.jar"))
	mods {
		"Hwite" {
			sourceSet sourceSets.main
		}
	}

}

runClient{
	args("--username", "Xy_Lose", "--session", "a.a.a.a", "--width", 854, "--height", 480)
}

dependencies {

	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings loom.fmlMCPMappings()
	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
//	implementation("org.spongepowered:mixin:0.8.5")

	implementation files("libs\\RustedIronCore-1.3.6.jar")
	implementation files("libs\\ManyLib-2.2.1.jar")
	implementation files("libs\\ModMenu-1.0.0.jar")
	implementation files("libs\\EMI-1.1.18.jar")
	implementation files(loom.getFML().toPath())
}

processResources {
	inputs.property "version", project.version

	filesMatching("fml.mod.json") {
		expand "version": project.version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 17
}

java {
	withSourcesJar()

	sourceCompatibility = JavaVersion.VERSION_17
	targetCompatibility = JavaVersion.VERSION_17
}

jar {
	from("LICENSE") {
		rename { "${it}_${project.base.archivesName.get()}"}
	}
}

publishing {
	publications {
		mavenJava(MavenPublication) {
			from components.java
		}
	}

	repositories {
	}
}
